add code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 
+jdk:
+- oraclejdk8
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -10,3 +13,6 @@ cache:
 
 script:
   - ./gradlew clean check
+
+after_success:
+- ./gradlew jacocoTestReport coveralls
