--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
     }
 }
 
+apply plugin: "java"
 apply plugin: 'kotlin'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'application'
@@ -36,8 +37,13 @@ compileTestKotlin {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
     maven { url "https://repo.spring.io/milestone" }
+}
+
+configurations {
+    ktlint
 }
 
 jar {
@@ -83,5 +89,32 @@ dependencies {
     testCompile("io.projectreactor:reactor-test")
     testCompile("org.junit.jupiter:junit-jupiter-api")
     testRuntime("org.junit.jupiter:junit-jupiter-engine")
+
+    ktlint "com.github.shyiko:ktlint:0.14.0"
 }
 
+task unzip(type: Copy) {
+    def zipFile = file('build/distributions/ep-makers-conversation-1.0.1.zip')
+    def outputDir = file("${buildDir}/unpacked/dist")
+
+    from zipTree(zipFile)
+    into outputDir
+}
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "src/**/*.kt"
+    // to generate report in checkstyle format prepend following args:
+    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+    // see https://github.com/shyiko/ktlint#usage for more
+}
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "-F", "src/**/*.kt"
+}
