--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.51'
+        kotlinVersion = '1.2.71'
         springBootVersion = '2.0.5.RELEASE'
         distName = "kotlin-swagger-spring-functional-template"
         distVersion = '1.3.0'
@@ -76,7 +76,7 @@ dependencies {
 
     compile("org.springframework:spring-webflux")
     compile("org.springframework:spring-context")
-    compile("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-webflux")
 
     compile("io.projectreactor.ipc:reactor-netty")
 
@@ -92,7 +92,7 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api")
     testRuntime("org.junit.jupiter:junit-jupiter-engine")
 
-    ktlint "com.github.shyiko:ktlint:0.23.1"
+    ktlint "com.github.shyiko:ktlint:0.29.0"
 }
 
 task unzip(type: Copy) {
@@ -103,7 +103,7 @@ task unzip(type: Copy) {
     into outputDir
 }
 
-task ktlint(type: JavaExec, group: "verification") {
+task lintKotlin(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     main = "com.github.shyiko.ktlint.Main"
     classpath = configurations.ktlint
@@ -112,9 +112,9 @@ task ktlint(type: JavaExec, group: "verification") {
     // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
     // see https://github.com/shyiko/ktlint#usage for more
 }
-check.dependsOn ktlint
+check.dependsOn lintKotlin
 
-task ktlintFormat(type: JavaExec, group: "formatting") {
+task formatKotlin(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     main = "com.github.shyiko.ktlint.Main"
     classpath = configurations.ktlint
