--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlinVersion = '1.2.71'
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.1.0.RELEASE'
         distName = "kotlin-swagger-spring-functional-template"
         distVersion = '1.3.0'
     }
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.junit.platform:junit-platform-gradle-plugin:1.0.2")
         classpath("org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2")
     }
@@ -31,11 +31,17 @@ version = distVersion
 sourceCompatibility = 1.8
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xjsr305=strict"]
+    }
 }
 
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xjsr305=strict"]
+    }
 }
 
 repositories {
@@ -66,34 +72,36 @@ dependencyManagement {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     }
 }
-
 dependencies {
-    compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
-    compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 
-    compile 'io.github.cdimascio:java-dotenv:3.1.3'
-    compile 'io.github.cdimascio:openapi-spring-webflux-validator:1.0.1'
+    implementation("org.springframework:spring-webflux")
+    implementation("org.springframework:spring-context")
+    implementation("org.springframework.boot:spring-boot-starter-webflux")
 
-    compile("org.springframework:spring-webflux")
-    compile("org.springframework:spring-context")
-    compile("org.springframework.boot:spring-boot-starter-webflux")
+    compile 'io.projectreactor.netty:reactor-netty:0.8.0.M1'
+//    implementation("io.projectreactor.ipc:reactor-netty")
+//    implementation group: 'io.projectreactor.ipc', name: 'reactor-netty', version: '0.7.11.RELEASE'
 
-    compile("io.projectreactor.ipc:reactor-netty")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6"
+    implementation 'io.github.cdimascio:java-dotenv:3.1.3'
+    implementation 'io.github.cdimascio:openapi-spring-webflux-validator:1.0.1'
 
-    compile("org.slf4j:slf4j-api")
-    compile("ch.qos.logback:logback-classic")
+    implementation("org.slf4j:slf4j-api")
+    implementation("ch.qos.logback:logback-classic")
 
     runtime files('src/main/resources')
 
-    testCompile("io.projectreactor:reactor-test")
-    testCompile("org.junit.jupiter:junit-jupiter-api")
+    testImplementation('io.projectreactor:reactor-test')
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
     testRuntime("org.junit.jupiter:junit-jupiter-engine")
 
     ktlint "com.github.shyiko:ktlint:0.29.0"
 }
+
 
 task unzip(type: Copy) {
     def zipFile = file("build/distributions/${distName}-${distVersion}.zip")
