--- a/build.gradle
+++ b/build.gradle
@@ -80,9 +80,7 @@ dependencies {
     implementation("org.springframework:spring-context")
     implementation("org.springframework.boot:spring-boot-starter-webflux")
 
-    compile 'io.projectreactor.netty:reactor-netty:0.8.0.M1'
-//    implementation("io.projectreactor.ipc:reactor-netty")
-//    implementation group: 'io.projectreactor.ipc', name: 'reactor-netty', version: '0.7.11.RELEASE'
+    compile 'io.projectreactor.netty:reactor-netty'
 
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
