--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ buildscript {
     }
 }
 
-apply plugin: "java"
 apply plugin: 'kotlin'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'application'
@@ -80,9 +79,9 @@ dependencies {
     implementation("org.springframework:spring-context")
     implementation("org.springframework.boot:spring-boot-starter-webflux")
 
-    compile 'io.projectreactor.netty:reactor-netty'
+    implementation 'io.projectreactor.netty:reactor-netty'
 
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 
     implementation 'io.github.cdimascio:java-dotenv:3.1.3'
