--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,9 @@ jacocoTestReport {
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+        mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") {
+            bomProperty("kotlin.version", "1.3.0")
+        }
     }
 }
 dependencies {
