--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.0'
+        kotlinVersion = '1.3.21'
         springBootVersion = '2.1.0.RELEASE'
         distName = "kotlin-swagger-spring-functional-template"
         distVersion = '1.4.0'
@@ -69,7 +69,7 @@ jacocoTestReport {
 dependencyManagement {
     imports {
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") {
-            bomProperty("kotlin.version", "1.3.0")
+            bomProperty("kotlin.version", "${kotlinVersion}")
         }
     }
 }
