--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.21'
-        springBootVersion = '2.1.0.RELEASE'
+        kotlinVersion = '1.3.71'
+        springBootVersion = '2.2.5.RELEASE'
         distName = "kotlin-swagger-spring-functional-template"
         distVersion = '1.4.0'
     }
@@ -94,11 +94,12 @@ dependencies {
 
     runtime files('src/main/resources')
 
+    implementation("io.projectreactor.kotlin:reactor-kotlin-extensions:1.0.2.RELEASE")
     testImplementation('io.projectreactor:reactor-test')
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testRuntime("org.junit.jupiter:junit-jupiter-engine")
 
-    ktlint "com.github.shyiko:ktlint:0.29.0"
+    ktlint("com.pinterest:ktlint:0.36.0")
 }
 
 
@@ -112,7 +113,7 @@ task unzip(type: Copy) {
 
 task lintKotlin(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "src/**/*.kt"
     // to generate report in checkstyle format prepend following args:
@@ -123,7 +124,7 @@ check.dependsOn lintKotlin
 
 task formatKotlin(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
 }
